# no-jerky-stepper

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  mjt.c  no_jerky_stepper.h  platform.c  platform.h
doc/: ESP32S3_RMT_notes.md
doc/latex/: background_theory.tex
python/: mjt_calculations.py  mjt_test.py  mjt_timestep_lut.h  requirements.txt
python/generated_headers/: mjt_mutli_level_timestep_lut.h  mjt_timestep_lut.h
src/core/: no_jerky_stepper.c  no_jerky_stepper.h
src/motion/: mjt.c  mjt.h  mjt_mutli_level_timestep_lut.h
src/platform/: esp32_rmt.c  esp32_rmt.h  esp32s3_rmt.c  esp32s3_rmt.h  no_jerky_platform.c  no_jerky_platform.h
